get tablet and mobile versions going, and fixed spacing around text using the padding instead of margin

--- a/assignment_2/css/styles.css
+++ b/assignment_2/css/styles.css
@@ -8,7 +8,6 @@ h1 {
 }
 .row {
     float: left;
-    background-color: aqua;
 }
 
 div {
@@ -21,26 +20,46 @@ div {
     position: relative;
     border: 1px solid black;
     background-color: red;
-    width: 50%;
+    width: 30%;
     margin-bottom: 10px;
 }
 
-.col-lg-4 {
-    float: left;
-    border: 1px solid black;
-    width: 33.33%;
-}
 
 .the-box {
     box-sizing: content-box;
     margin: 10px;
-    border: 3px solid blue;
+    background-color: gray;
+    /* border: 3px solid blue; */
 }
 
 .the-box-text {
     box-sizing: content-box;
-    margin: 10px;
-    border: 3px solid red;
-    clear: both;
+    padding: 20px 20px 0px 20px;
+    /* border: 3px solid red; */
+    clear: both; /* clear the section heading */
 }
 
+/* default to col-lg-4, no explicit check for desktop mode */
+
+.col-lg-4 {
+    float: left;
+    /*border: 1px solid black; */
+    margin-bottom: 20px;
+    width: 33.33%;
+}
+
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+    .col-tb-6 {
+        width: 50%;
+    }
+
+    .col-tb-12 {
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+  }
